syntax = "proto3";
package assetmantle.schema.data.base;

import "data/base/acc_address_data.proto";
import "data/base/boolean_data.proto";
import "data/base/dec_data.proto";
import "data/base/height_data.proto";
import "data/base/id_data.proto";
import "data/base/linked_data.proto";
import "data/base/list_data.proto";
import "data/base/number_data.proto";
import "data/base/string_data.proto";
import "gogoproto/gogo.proto";

message AnyData {
  option (gogoproto.goproto_getters) = false;

  oneof impl {
    AccAddressData acc_address_data = 1;
    BooleanData boolean_data = 2;
    DecData dec_data = 3;
    HeightData height_data = 4;
    IDData i_d_data = 5;
    ListData list_data = 6;
    LinkedData linked_data = 7;
    NumberData number_data = 8;
    StringData string_data = 9;
  }
}